# rfc4648-base64

./: CMakeLists.txt  LICENSE  README.md  common.hpp  decode.hpp  encode.hpp  examples.cpp  rfc4648_base64.cpp
tests/: gen_vectors.py  generated_vectors.hpp  test_rfc4648.cpp
